--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>名人名言展示</title>
+    <title>310金句录</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -10,9 +10,18 @@
             margin: 0;
             padding: 0;
         }
+        .header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+        .header h1 {
+            margin: 0;
+        }
         .container {
             width: 80%;
-            margin: auto;
+            margin: 30px auto;
             overflow: hidden;
         }
         .quote {
@@ -21,12 +30,14 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             margin: 20px 0;
+            position: relative;
             quotes: "“" "”";
         }
         .quote:before {
             content: open-quote;
             font-size: 4em;
             line-height: .1em;
+            margin-right: 0.25em;
             vertical-align: -.4em;
             color: #4CAF50;
         }
@@ -34,7 +45,8 @@
             content: close-quote;
             font-size: 4em;
             line-height: .1em;
-            vertical-align: -.55em;
+            margin-left: 0.25em;
+            vertical-align: -.35em;
             color: #4CAF50;
         }
         .quote p {
@@ -58,23 +70,19 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <h1>310金句录</h1>
+    </div>
     <div class="container">
+        <!-- 名人名言展示 -->
         <div class="quote">
             <p>“只有用心去看，才能看到真实。事物的真相只有用心灵才能看到。”</p>
             <span class="author">——《小王子》</span>
         </div>
-        <div class="quote">
-            <p>“星星之所以美丽，是因为有一朵看不见的花。”</p>
-            <span class="author">——《小王子》</span>
-        </div>
-        <div class="quote">
-            <p>“重要的不是活了多少年，而是这些年怎么活。”</p>
-            <span class="author">——乔治·奥威尔</span>
-        </div>
         <!-- 更多名言可以继续添加 -->
     </div>
     <footer>
-        <p>© 2024 名人名言展示</p>
+        <p>© 2024 310金句录</p>
     </footer>
 </body>
 </html>
