--- a/index.html
+++ b/index.html
@@ -76,8 +76,24 @@
     <div class="container">
         <!-- 名人名言展示 -->
         <div class="quote">
-            <p>“只有用心去看，才能看到真实。事物的真相只有用心灵才能看到。”</p>
-            <span class="author">——《小王子》</span>
+            <p>“我又不是没见过这样的女人”</p>
+            <span class="author">——贾涵钧</span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">——贾涵钧</span>
+        </div>
+        <div class="quote">
+            <p>“我又不是没见过这样的女人”</p>
+            <span class="author">——贾涵钧</span>
+        </div>
+        <div class="quote">
+            <p>“我又不是没见过这样的女人”</p>
+            <span class="author">——贾涵钧</span>
+        </div>
+        <div class="quote">
+            <p>“我又不是没见过这样的女人”</p>
+            <span class="author">——贾涵钧</span>
         </div>
         <!-- 更多名言可以继续添加 -->
     </div>
