--- a/index.html
+++ b/index.html
@@ -15,12 +15,31 @@
             color: #fff;
             text-align: center;
             padding: 40px 0;
+            position: relative;
         }
         .header h1 {
             margin: 0;
             font-size: 2.5em;
             letter-spacing: 2px;
             text-transform: uppercase;
+            color: gold; /* 大标题换成金色 */
+            display: inline-block;
+            vertical-align: middle;
+        }
+        .header .subtitle {
+            display: inline-block;
+            margin-left: 20px;
+            font-size: 1.2em;
+            color: #fff;
+            vertical-align: middle;
+            text-decoration: none;
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 5px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .header .subtitle:hover {
+            background-color: rgba(255, 255, 255, 0.4);
         }
         .container {
             width: 75%;
@@ -83,6 +102,7 @@
 <body>
     <div class="header">
         <h1>310金句录</h1>
+        <a href="fengcai.html" class="subtitle">310风采录</a>
     </div>
     <div class="container">
         <!-- 名人名言展示 -->
