--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
     <div class="header">
         <h1>310金句录</h1>
-        <a href="fengcai.html" class="subtitle">310风采录</a>
+        <a href="Photos-Carousel-master/index.html" class="subtitle">310风采录</a>
     </div>
     <div class="container">
         <!-- 名人名言展示 -->
