--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             font-size: 2.5em;
             letter-spacing: 2px;
             text-transform: uppercase;
-            color: gold; /* 大标题换成金色 */
+            color: gold;
             display: inline-block;
             vertical-align: middle;
         }
@@ -87,6 +87,14 @@
             margin-top: 15px;
             font-weight: bold;
             color: #2E8B57;
+            position: relative;
+        }
+        .author img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            vertical-align: middle;
+            margin-right: 10px;
         }
         footer {
             text-align: center;
@@ -102,29 +110,23 @@
 <body>
     <div class="header">
         <h1>310金句录</h1>
-        <a href="Photos-Carousel-master/index.html" class="subtitle">310风采录</a>
+        <a href="fengcai.html" class="subtitle">310风采录</a>
     </div>
     <div class="container">
         <!-- 名人名言展示 -->
         <div class="quote">
             <p>“我又不是没见过这样的女人”</p>
-            <span class="author">——贾涵钧</span>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
         </div>
         <div class="quote">
             <p>“我钱还是很多的”</p>
-            <span class="author">——贾涵钧</span>
-        </div>
-        <div class="quote">
-            <p>“我又不是没见过这样的女人”</p>
-            <span class="author">——贾涵钧</span>
-        </div>
-        <div class="quote">
-            <p>“我又不是没见过这样的女人”</p>
-            <span class="author">——贾涵钧</span>
-        </div>
-        <div class="quote">
-            <p>“我又不是没见过这样的女人”</p>
-            <span class="author">——贾涵钧</span>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
         </div>
         <!-- 更多名言可以继续添加 -->
     </div>
