--- a/index.html
+++ b/index.html
@@ -128,6 +128,70 @@
                 ——贾涵钧
             </span>
         </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        
         <!-- 更多名言可以继续添加 -->
     </div>
     <footer>
