--- a/index.html
+++ b/index.html
@@ -6,40 +6,43 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f0f5;
+            background: linear-gradient(135deg, #e3ffe7 0%, #d9e7ff 100%);
             margin: 0;
             padding: 0;
         }
         .header {
-            background: linear-gradient(135deg, #4CAF50, #2E8B57);
+            background: linear-gradient(135deg, #ff6f61, #d74343);
             color: #fff;
             text-align: center;
-            padding: 40px 0;
+            padding: 50px 0;
             position: relative;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
         }
         .header h1 {
             margin: 0;
-            font-size: 2.5em;
-            letter-spacing: 2px;
+            font-size: 3em;
+            letter-spacing: 3px;
             text-transform: uppercase;
-            color: gold;
+            color: #fff176;
             display: inline-block;
             vertical-align: middle;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         .header .subtitle {
             display: inline-block;
-            margin-left: 20px;
-            font-size: 1.2em;
+            margin-left: 30px;
+            font-size: 1.3em;
             color: #fff;
             vertical-align: middle;
             text-decoration: none;
-            background-color: rgba(255, 255, 255, 0.2);
-            padding: 5px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
+            background-color: #ff8a65;
+            padding: 10px 20px;
+            border-radius: 30px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         .header .subtitle:hover {
-            background-color: rgba(255, 255, 255, 0.4);
+            background-color: #ffab91;
+            transform: scale(1.1);
         }
         .container {
             width: 75%;
@@ -47,8 +50,8 @@
             overflow: hidden;
         }
         .quote {
-            background-color: #fff;
-            border-left: 6px solid #4CAF50;
+            background-color: #ffffff;
+            border-left: 6px solid #ff6f61;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             padding: 30px;
             margin: 20px 0;
@@ -57,7 +60,7 @@
             transition: transform 0.3s ease-in-out;
         }
         .quote:hover {
-            transform: scale(1.02);
+            transform: scale(1.05);
         }
         .quote:before {
             content: open-quote;
@@ -65,7 +68,7 @@
             line-height: 0.1em;
             margin-right: 0.25em;
             vertical-align: -0.4em;
-            color: #4CAF50;
+            color: #ff6f61;
         }
         .quote:after {
             content: close-quote;
@@ -73,11 +76,11 @@
             line-height: 0.1em;
             margin-left: 0.25em;
             vertical-align: -0.35em;
-            color: #4CAF50;
+            color: #ff6f61;
         }
         .quote p {
             display: inline;
-            font-size: 1.4em;
+            font-size: 1.5em;
             color: #333;
             font-style: italic;
         }
@@ -86,24 +89,28 @@
             display: block;
             margin-top: 15px;
             font-weight: bold;
-            color: #2E8B57;
+            color: #ff6f61;
             position: relative;
         }
         .author img {
-            width: 30px;
-            height: 30px;
+            width: 35px;
+            height: 35px;
             border-radius: 50%;
             vertical-align: middle;
             margin-right: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         footer {
             text-align: center;
             padding: 30px;
-            background-color: #333;
+            background-color: #d74343;
             color: #fff;
-            font-size: 0.9em;
-            letter-spacing: 1px;
+            font-size: 1em;
+            letter-spacing: 2px;
             text-transform: uppercase;
+        }
+        footer p {
+            margin: 0;
         }
     </style>
 </head>
@@ -128,71 +135,105 @@
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        <div class="quote">
+                <div class="quote">
             <p>“我钱还是很多的”</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
-        
-        <!-- 更多名言可以继续添加 -->
+                <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+                <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+                <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+                <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+                <div class="quote">
+            <p>“我钱还是很多的”</p>
+            <span class="author">
+                <img src="avatar1.jpg" alt="贾涵钧头像">
+                ——贾涵钧
+            </span>
+        </div>
+        <!-- 继续添加更多名言 -->
     </div>
     <footer>
         <p>© 2024 310金句录</p>
