--- a/index.html
+++ b/index.html
@@ -122,112 +122,77 @@
     <div class="container">
         <!-- 名人名言展示 -->
         <div class="quote">
-            <p>“我又不是没见过这样的女人”</p>
+            <p>爱理不理，不理拉倒，我又不是没见过这种女生——怒评李番</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
         <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>其实，我钱还是很多的——2023.11.29烧烤后</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>stata还是很简单的——2023.12.21（后续：听不懂，一讲数学我就犯困）</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>搞快点，周六可以搞完（财务报表分析作业，实际完成于周一凌晨）</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>我笑从来不发出声音——2024.1.3</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>总得学点代码吧——2024.2.23选课</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>一到代码就困（接上一条）——2024.5.6</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>现在对女人毫无兴趣——2024.4.3组会前</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>社交社交，先she再交——2024.5.8</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>一次只能带一个女孩回家吗？半夜几点有妓女？——2024.5.8</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
             </span>
         </div>
                 <div class="quote">
-            <p>“我钱还是很多的”</p>
-            <span class="author">
-                <img src="avatar1.jpg" alt="贾涵钧头像">
-                ——贾涵钧
-            </span>
-        </div>
-                <div class="quote">
-            <p>“我钱还是很多的”</p>
-            <span class="author">
-                <img src="avatar1.jpg" alt="贾涵钧头像">
-                ——贾涵钧
-            </span>
-        </div>
-                <div class="quote">
-            <p>“我钱还是很多的”</p>
-            <span class="author">
-                <img src="avatar1.jpg" alt="贾涵钧头像">
-                ——贾涵钧
-            </span>
-        </div>
-                <div class="quote">
-            <p>“我钱还是很多的”</p>
-            <span class="author">
-                <img src="avatar1.jpg" alt="贾涵钧头像">
-                ——贾涵钧
-            </span>
-        </div>
-                <div class="quote">
-            <p>“我钱还是很多的”</p>
-            <span class="author">
-                <img src="avatar1.jpg" alt="贾涵钧头像">
-                ——贾涵钧
-            </span>
-        </div>
-                <div class="quote">
-            <p>“我钱还是很多的”</p>
+            <p>老贾就爱做AI</p>
             <span class="author">
                 <img src="avatar1.jpg" alt="贾涵钧头像">
                 ——贾涵钧
